@@ -10,4 +10,6 @@ DB:
     - utility to update the license file
     - ability to change the license file form console
     - console can be installed by accessing: https://db_address/console
+    - the filesystem of the agent is not retrieved by default, you have to schedule it
+    - fix for the evidence move while moving active targets
     - fix for the status check of the shards
